Atlantean Afrika Added

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -964,6 +964,8 @@
  STATE_963:0 "Vorea"
  STATE_964:0 "Zukustane"
  STATE_965:0 "Latasmun"
+ STATE_966:0 "Takamafrika"
+ STATE_967:0 "Zenigal"
  
  
  
