--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1031,3 +1031,5 @@
  VICTORY_POINTS_14151:0 "Tashrets"
  VICTORY_POINTS_14156:0 "Chuzaseit"
  VICTORY_POINTS_14157:0 "Taidorie"
+ VICTORY_POINTS_14257:0 "Takam"
+ VICTORY_POINTS_14258:0 "Mashat"
