cities in Canada, ATL focus tree

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -532,7 +532,7 @@
  VICTORY_POINTS_8252:0 "Guayaquil"
  VICTORY_POINTS_9108:0 "Luleå"
  VICTORY_POINTS_9458:0 "Portsmouth"
- VICTORY_POINTS_9832:0 "Providence"
+ VICTORY_POINTS_9832:0 "Hartford"
  VICTORY_POINTS_9907:0 "Florence"
  VICTORY_POINTS_9945:1 "Ceuta"
  VICTORY_POINTS_9974:0 "Ningbo"
@@ -1033,3 +1033,14 @@
  VICTORY_POINTS_14157:0 "Taidorie"
  VICTORY_POINTS_14257:0 "Takam"
  VICTORY_POINTS_14258:0 "Mashat"
+ VICTORY_POINTS_6909:0 "New Haven"
+ VICTORY_POINTS_11830:0 "Providence"
+ VICTORY_POINTS_4854:0 "Marquette"
+ VICTORY_POINTS_14217:0 "Punta Bruja"
+ VICTORY_POINTS_10527:0 "Yellowknife"
+ VICTORY_POINTS_10548:0 "Mannerton"
+ VICTORY_POINTS_12571:0 "Sampson"
+ VICTORY_POINTS_7869:0 "Whitehorse"
+ VICTORY_POINTS_14208:0 "Ollebo"
+ VICTORY_POINTS_7820:0 "Cordial"
+ VICTORY_POINTS_14205:0 "Rycroft"
