--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -1,36 +1,36 @@
 ﻿l_english:
  ATL_fascist:0 "Atlantean Fascism"
- ATL_fascist_desc:0 "."
+ ATL_fascist_desc:0 "Our people are crying out for a strong leader. Our people long to have their rights and privileges as citizens of The Empire restored. We must listen to their call."
  ATL_empower_presidency:0 "Empower the Presidency"
- ATL_empower_presidency_desc:0 "."
+ ATL_empower_presidency_desc:0 "History has shown that a strong leader is necessary for the survival and prosperity of the nation."
  ATL_ensure_military_loyalty:0 "Ensure Military Loyalty"
- ATL_ensure_military_loyalty_desc:0 "."
+ ATL_ensure_military_loyalty_desc:0 "By bringing the military more fully under the control of the necessary strong leader we can ensure the right changes take place in Atlantis."
  ATL_weaken_judiciary:0 "Weaken the Judicial Branch"
- ATL_weaken_judiciary_desc:0 "."
+ ATL_weaken_judiciary_desc:0 "Old judges with poor understanding of the new order of things will only weaken and divide our great nation. We must take power from them and give it to those that will be loyal to the nation!"
  ATL_tame_legislative:0 "Tame the Legislative Branch"
- ATL_tame_legislative_desc:0 "."
+ ATL_tame_legislative_desc:0 "A great leader cannot rule an entire country without help, so a legislative body with appropriate loyalty is a necessary thing."
  ATL_subvert_education:0 "Subvert Education Branch"
- ATL_subvert_education_desc:0 "."
+ ATL_subvert_education_desc:0 "The ideas of the West have been poisoning the minds of our children for long enough. They must understand the true destiny of Atlantis, and have loyalty to the rightful leader."
  ATL_reinstitute_military_districts:0 "Reinstitute the Military Districts"
- ATL_reinstitute_military_districts_desc:0 "."
+ ATL_reinstitute_military_districts_desc:0 "In the early days of the republican experiment in Atlantis there were military districts which enabled faster training of military units. This would be a boon to us in these dangerous times."
  ATL_reembody_military_dynasties:0 "Reembody Military Dynasties"
- ATL_reembody_military_dynasties_desc:0 "."
+ ATL_reembody_military_dynasties_desc:0 "The previous dynasties which controlled the military were abolished after the Atlantean Civil War less than 100 years ago. This was a mistake that should be rectified. The military dynasties will provide us with well trained and equipped units to defend our interests."
  ATL_isolation:0 "Push Away the World"
- ATL_isolation_desc:0 "."
+ ATL_isolation_desc:0 "Atlantis alone stands, requiring neither help nor suggestion. We have sampled what the outside world has claimed to be 'good' for us, and found that we do not need it. We will focus on ourselves and our needs."
  ATL_ensure_balance_powers:0 "Ensure the Balance of Powers"
- ATL_ensure_balance_powers_desc:0 "."
+ ATL_ensure_balance_powers_desc:0 "The survival of Atlantis depends on the balance of powers prescribed by those who gave us our Republic. The five branches of government, Executive, Judicial, Legislative, Military, and Education, exists to support and counterbalance one another. We must ensure that this system continue in perpetuity."
  ATL_military_power:0 "Military Branch Power"
- ATL_military_power_desc:0 "."
+ ATL_military_power_desc:0 "To provide safety for every Atlantean, the Military is charged with protecting Atlantis' land, sea, and air."
  ATL_executive_power:0 "Executive Branch Power"
- ATL_executive_power_desc:0 "."
+ ATL_executive_power_desc:0 "To ensure that the nation is properly organized, the Executive is charged with maintaining understanding and cohesion within Atlantis."
  ATL_judicial_power:0 "Judicial Branch Power"
- ATL_judicial_power_desc:0 "."
+ ATL_judicial_power_desc:0 "To secure the correct interpretation of the law, the Judiciary is charged with impartially applying the law to every Atlantean."
  ATL_legislative_power:0 "Legislative Branch Power"
- ATL_legislative_power_desc:0 "."
+ ATL_legislative_power_desc:0 "To give safe and just laws, the Legislative is charged with meeting each new situation and providing a way for Atlantis to understand her place."
  ATL_educational_power:0 "Education Branch Power"
- ATL_educational_power_desc:0 "."
+ ATL_educational_power_desc:0 "To teach and uplift the nation, the Educational Branch is charged with the improvements of the people's minds."
  ATL_domestic_resource_exploit:0 "Domestic Resource Exploitation"
- ATL_domestic_resource_exploit_desc:0 "."
+ ATL_domestic_resource_exploit_desc:0 "Atlantis has great need of resources to fuel her industries. We must ensure that we are in a position to profit from the coming years."
  ATL_domestic_manuf1:0 "Domestic Manufacturing I"
  ATL_domestic_manuf1_desc:0 "."
  ATL_domestic_manuf2:0 "Domestic Manufacturing II"
@@ -39,8 +39,12 @@
  ATL_domestic_manuf3_desc:0 "."
  ATL_democracy:0 "Atlantean Democracy"
  ATL_democracy_desc:0 "."
+ ATL_resource_exp1:0 "Resource Exploitation I"
+ ATL_resource_exp1_desc:0 "."
+ ATL_resource_exp2:0 "Resource Exploitation II"
+ ATL_resource_exp2_desc:0 "."
  ATL_attack_corruption:0 "Attack Corruption"
- ATL_attack_corruption_desc:0 "."
+ ATL_attack_corruption_desc:0 "For too long has corruption run rampant in Atlantis. We must ignore it no more and attack it head on. This will be a painful process, but in the end all of Atlantis will be better for it."
  ATL_education_initiative:0 "Education Initiative"
  ATL_education_initiative_desc:0 "."
  ATL_increase_edu_branch_power:0 "Increase Education Branch Power"
@@ -57,6 +61,8 @@
  ATL_restrict_dynastic_rights_desc:0 "."
  ATL_quell_social_unrest:0 "Quell Social Unrest"
  ATL_quell_social_unrest_desc:0 "."
+ ATL_attack_bourgeoisie:0 "Attack the Bourgeoisie"
+ ATL_attack_bourgeoisie_desc:0 "."
  ATL_empower_peoples_unions:0 "Empower Peoples Unions"
  ATL_empower_peoples_unions_desc:0 "."
  ATL_weaken_executive_br:0 "Weaken the Executive Branch"
@@ -105,6 +111,70 @@
  ATL_vlfp_desc:0 "For years we have been reliant on our system of floating farms. Some of our military designers have begun to suggest that we could use our knowledge from constructing these structures to make large vessels; armored battlefields, floating fortresses, mobile island cities. Our expertise could allow us to create Very Large Floating Platforms, the likes of which the world has never seen."
  ATL_calculation_machine:0 "Calculation Machine"
  ATL_calculation_machine_desc:0 "The English polymath Charles Babbage, who studied for years in Zuhaitz at the Atlantean Polytechnic Institute, was nearly finished with his 'Differential Engine' before his death. Sadly, it has languished unfinished in his workshop. Our scientists believe that this machine could be completed and that it will speed up their own research greatly if they own it. We must acquire it, or a copy of it."
+ ATL_trading_and_banking_societies:0 "Trade and Banking Societies"
+ ATL_trading_and_banking_societies_desc:0 "."
+ ATL_karistig_dynasty:0 "Karistig Dynasty"
+ ATL_karistig_dynasty_desc:0 "."
+ ATL_tensapiak_cartel:0 "Tensapiak Cartel"
+ ATL_tensapiak_cartel_desc:0 "."
+ ATL_united_bankers_guild:0 "United Bankers Guild"
+ ATL_united_bankers_guild_desc:0 "."
+ ATL_rothschilds:0 "Rothschilds"
+ ATL_rothschilds_desc:0 "."
+ ATL_fuggers:0 "Fuggers"
+ ATL_fuggers_desc:0 "."
+ ATL_political_news_societies:0 "Political and News Societies"
+ ATL_political_news_societies_desc:0 "."
+ ATL_monarchists:0 "Monarchists"
+ ATL_monarchists_desc:0 "."
+ ATL_black_daggers:0 "Black Daggers"
+ ATL_black_daggers_desc:0 "."
+ ATL_hexanchial:0 "The Hexanchial"
+ ATL_hexanchial_desc:0 "."
+ ATL_hearsts:0 "The Hearsts"
+ ATL_hearsts_desc:0 "."
+ ATL_kaiturn_family:0 "The Kaiturn Family"
+ ATL_kaiturn_family_desc:0 "."
+ ATL_rmvp:0 "RMVP"
+ ATL_rmvp_desc:0 "A unique opportunity has presented itself. The Reichsministerium für Volksaufklärung und Propaganda, otherwise known as the Nazi Propaganda Machine, has begun spreading control throughout the outlying islands. If we were to welcome them in and given them control of our domestic news services we might find ourselves with a powerful ally, Germany."
+ ATL_crime_societies:0 "Crime Syndicates"
+ ATL_crime_societies_desc:0 "."
+ ATL_zichilianak:0 "The Sicilians"
+ ATL_zichilianak_desc:0 "."
+ ATL_siegels:0 "The Siegels"
+ ATL_siegels_desc:0 "."
+ ATL_kaprastiak:0 "The Kaprastiak Dynasty"
+ ATL_kaprastiak_desc:0 "."
+ ATL_itorkanak:0 "The Itorkanak Dynasty"
+ ATL_itorkanak_desc:0 "."
+ ATL_military_societies:0 "Military Societies"
+ ATL_military_societies_desc:0 "."
+ ATL_maneaters:0 "The Maneaters"
+ ATL_maneaters_desc:0 "History knew the Maneaters through various names, but the best known was the Greek epithet 'Anthropofagoi'. Born from the death cults of Southwest Atlantis the Maneaters take strength and courage from devouring the flesh of their enemies. They are almost unstoppable on the field of battle."
+ ATL_restorationists:0 "The Restorationists"
+ ATL_restorationists_desc:0 "The Restorationists have determined that now is the time to bring back the rightful rule of monarchy. They have determined that through skillful control of the military they can place themselves in the needed places at the right time to strike."
+ ATL_religious_societies:0 "Religious Societies"
+ ATL_religious_societies_desc:0 "For centuries the influence of religion has been felt in Atlantis. Here, too, secret societies have tried to wrest control from one another to try to gain power and prestige. Our nation must be united!"
+ ATL_gostudi_cult:0 "Gostudi Cult"
+ ATL_gostudi_cult_desc:0 "Founded on the principle of destroying organized religion from within, the Gostudi Cult seeks to infiltrate any religious group and to control it. They have strong fascist tendencies, and think nothing of using murder to further their goals."
+ ATL_vox_petri:0 "Vox Petri"
+ ATL_vox_petri_desc:0 "'The Voice of Peter' is a Catholic secret society which has been working slowly, but surely, in Atlantis since 1567CE. Their ultimate goal is to bring Atlantean religion more in line with Christianity, specifically Roman Apostolic Christianity. Their works may bring us closer to our neighbors in Europe."
+ ATL_deimila_cult:0 "Deimila Cult"
+ ATL_deimila_cult_desc:0 "Devotees of Atlantis' deistic religion, the Deimila Cult wants to preserve Atlantean traditions and values, maintaining the primacy of Atlantean belief in the Absent Creator. They work tirelessly to root out foreign corruptions of doctrine and tradition, preserving Atlantis as it is meant to be."
+ ATL_educational_societies:0 "Educational Societies"
+ ATL_educational_societies_desc:0 "Educating the minds of our youth is often seen as a step toward influencing the future of our nation. We must support those that would teach our youth in the way that will best prepare Atlantis for the coming years."
+ ATL_overturners:0 "The Overturners"
+ ATL_overturners_desc:0 "These former university students, lead by their belief that foreign influence is damaging the Atlantean educational system, have determined that they will strike out to prevent any further decay of 'Atlantean Thought'."
+ ATL_orange_masks:0 "The Orange Masks"
+ ATL_orange_masks_desc:0 "A remarkably diverse group of radicals, the Orange Masks feel that their is an insufficient emphasis on the good of the people of Atlantis. They are determined to root out the hidebound elements that are 'preventing the rightful reeducation of the people'."
+ ATL_red_bandanas:0 "The Red Bandanas"
+ ATL_red_bandanas_desc:0 "A disagreement has arisen within the ranks of the Orange Masks! The Red Bandanas wish to bring communist and socialist teachings to our youth to help them join the glorious Socialist World Revolution."
+ ATL_green_brigade:0 "The Green Brigade"
+ ATL_green_brigade_desc:0 "A disagreement has arisen within the ranks of the Orange Masks! The Green Brigade understands that National Socialism is the answer to Atlantis' problems. The people must be made to understand, and taught in school, that their devotion to the state and a strong leader will preserve Atlantis."
+ ATL_kenistroiak:0 "The Kenistroiak"
+ ATL_kenistroiak_desc:0 "These students and professors, often educated at foreign universities in Britain or the United States, wish to see democratic reforms sweep more fully across the nation, even in education. They feel that they benefits of a strong capitalist system will ensure the health and wellbeing of Atlantis."
+ ATL_:0 ""
+ _desc:0 "."
  ATL_:0 ""
  _desc:0 "."
  
