--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -32,79 +32,79 @@
  ATL_domestic_resource_exploit:0 "Domestic Resource Exploitation"
  ATL_domestic_resource_exploit_desc:0 "Atlantis has great need of resources to fuel her industries. We must ensure that we are in a position to profit from the coming years."
  ATL_domestic_manuf1:0 "Domestic Manufacturing I"
- ATL_domestic_manuf1_desc:0 "."
+ ATL_domestic_manuf1_desc:0 "Our manufacturing capabilities still lag far behind other nations like Britain or America. This cannot stand! Atlantis must rise and take her rightful place in the world."
  ATL_domestic_manuf2:0 "Domestic Manufacturing II"
- ATL_domestic_manuf2_desc:0 "."
+ ATL_domestic_manuf2_desc:0 "Shrewd investment in the manufacturing sector is beginning to show some benefits."
  ATL_domestic_manuf3:0 "Domestic Manufacturing III"
- ATL_domestic_manuf3_desc:0 "."
+ ATL_domestic_manuf3_desc:0 "With a little more effort and investment Atlantis will soon reach her rightful potential."
  ATL_democracy:0 "Atlantean Democracy"
- ATL_democracy_desc:0 "."
+ ATL_democracy_desc:0 "Now, more than ever, Atlantis must focus on her republican past. We were a representative democracy before the Americans, the British, or even the French. Ours is the home of the government of the people. We must ensure that our friends who follow our example must continue, and bring new allies into the fold of representative government."
  ATL_resource_exp1:0 "Resource Exploitation I"
- ATL_resource_exp1_desc:0 "."
+ ATL_resource_exp1_desc:0 "While not blessed with an abundance of natural resources Atlantis still has enough to be worth investing in."
  ATL_resource_exp2:0 "Resource Exploitation II"
- ATL_resource_exp2_desc:0 "."
+ ATL_resource_exp2_desc:0 "Scientific studies have shown that there are a few more deposits of strategic materials that we can exploit."
  ATL_attack_corruption:0 "Attack Corruption"
  ATL_attack_corruption_desc:0 "For too long has corruption run rampant in Atlantis. We must ignore it no more and attack it head on. This will be a painful process, but in the end all of Atlantis will be better for it."
  ATL_education_initiative:0 "Education Initiative"
- ATL_education_initiative_desc:0 "."
+ ATL_education_initiative_desc:0 "The founders of our republic understood the power of education. Atlantis has the longest running public education system in the world - and we are rightfully proud of it. But we can do more! We must invest in our future generations if we are to thrive."
  ATL_increase_edu_branch_power:0 "Increase Education Branch Power"
  ATL_increase_edu_branch_power_desc:0 "."
  ATL_foreign_companies:0 "Foreign Companies"
- ATL_foreign_companies_desc:0 "."
+ ATL_foreign_companies_desc:0 "Atlantis has proven that it is an independent and prosperous nation, without meddling from abroad, but if we bring in foreign competition we might breathe new life into parts of our economy that are little more than stagnant."
  ATL_foreign_professors:0 "Foreign Professors"
- ATL_foreign_professors_desc:0 "."
+ ATL_foreign_professors_desc:0 "Good ideas are not solely produced by Atlanteans, no matter how much we wish this to be true. We should bring in experts from foreign lands to help bring in ideas to help spark Atlantean creativity and brilliance."
  ATL_communist:0 "Atlantean Communism"
- ATL_communist_desc:0 "."
+ ATL_communist_desc:0 "All working for the good of all. Our ancestors taught us this, and we should cherish their wisdom. Communism, Socialism... call it what you will, we should bring the people back to this time honored truth. "
  ATL_power_to_the_people:0 "Power to the People"
- ATL_power_to_the_people_desc:0 "."
+ ATL_power_to_the_people_desc:0 "To rule a people they must understand that they are ultimately the ones with the power. This is what the people of Atlantis must be taught; that they - not some capitalists, bureaucrats, or cabals - hold the true power!"
  ATL_restrict_dynastic_rights:0 "Restrict Dynastic Rights"
- ATL_restrict_dynastic_rights_desc:0 "."
+ ATL_restrict_dynastic_rights_desc:0 "The old dynasties, bands of families who support each other in all things social or political, have long controlled Atlantis. They have dictated Atlantean laws and social norms for far too many generations! Today we show the people that the People are in charge of Atlanits, not the Dynasties!"
  ATL_quell_social_unrest:0 "Quell Social Unrest"
- ATL_quell_social_unrest_desc:0 "."
+ ATL_quell_social_unrest_desc:0 "Many of our social changes have not been well received by some of the populace. We must take steps to calm them before they scurry back to their capitalist masters like the whipped curs they are!"
  ATL_attack_bourgeoisie:0 "Attack the Bourgeoisie"
- ATL_attack_bourgeoisie_desc:0 "."
+ ATL_attack_bourgeoisie_desc:0 "Down with the capitalists! Down with the bourgeoisie! We must disrupt the systems that keep them in power over the people!"
  ATL_empower_peoples_unions:0 "Empower Peoples Unions"
- ATL_empower_peoples_unions_desc:0 "."
+ ATL_empower_peoples_unions_desc:0 "It is time for the people to be heard! They must organize and stand up for their rights!"
  ATL_weaken_executive_br:0 "Weaken the Executive Branch"
- ATL_weaken_executive_br_desc:0 "."
+ ATL_weaken_executive_br_desc:0 "The people, not some self-righteous bureaucrat, wield the ultimate power in Atlantis, and it is time that our laws and government reflect that reality."
  ATL_weaken_judicial_br:0 "Weaken the Judicial Branch"
- ATL_weaken_judicial_br_desc:0 "."
+ ATL_weaken_judicial_br_desc:0 "Doddering old judges should not be able to stand between the people and their rightful and proper government! We must de-fang these wizened serpents before they can strike."
  ATL_communist_reeducation:0 "Communist Reeducation"
- ATL_communist_reeducation_desc:0 "."
+ ATL_communist_reeducation_desc:0 "Our people must be made to understand that communism is not a new and foreign thing. No! It is merely a refinement of the Atlantean ideals of communal perfection!"
  ATL_military_infiltration:0 "Military Infiltration"
- ATL_military_infiltration_desc:0 "."
+ ATL_military_infiltration_desc:0 "By infiltrating the military we can ensure that a sufficient number of units will support us when the time is right to declare the new direction for the republic."
  ATL_education_infiltration:0 "Education Infiltration"
- ATL_education_infiltration_desc:0 "."
+ ATL_education_infiltration_desc:0 "A proper education is necessary for our youth to correctly appreciate their place in this dangerous world, and that place is under the banner of socialism!"
  ATL_merge_mil_edu:0 "Merge Military and Education Branches"
- ATL_merge_mil_edu_desc:0 "."
+ ATL_merge_mil_edu_desc:0 "The military and educational branches already rely on each other, we should just consolidate them and save on administrative costs."
  ATL_secret_societies:0 "The Secret Societies"
- ATL_secret_societies_desc:0 "."
+ ATL_secret_societies_desc:0 "Secret Societies have long been a part of Atlantean life. Few, if any, do not have a connection to one or more of these secret bands. Hearkening back to our tribal days, these societies have allowed us to control various aspects of our culture while maintaining the polite façade necessary."
  ATL_military_branch:0 "Military Focus"
- ATL_military_branch_desc:0 "."
+ ATL_military_branch_desc:0 "Our military has been falling behind! We must upgrade our capabilities."
  ATL_standard_projects:0 "Standard Projects"
- ATL_standard_projects_desc:0 "."
+ ATL_standard_projects_desc:0 "Every nation that wishes to continue to exist as a nation must prepare its people for the challenges ahead. We must begin work on special projects to ensure our people's safety and security."
  ATL_national_defense_initiative:0 "National Defense Initiative"
- ATL_national_defense_initiative_desc:0 "."
+ ATL_national_defense_initiative_desc:0 "No where in this world is safe. Thus we must prepare ourselves for the conflicts that will arise over the next few years."
  ATL_strategy_buff1:0 "Army Improvements"
- ATL_strategy_buff1_desc:0 "."
+ ATL_strategy_buff1_desc:0 "The Atlantean Army, while sufficient for the last century, must adapt to new circumstances and threats."
  ATL_strategy_buff2:0 "Navy Improvements"
- ATL_strategy_buff2_desc:0 "."
+ ATL_strategy_buff2_desc:0 "The Atlantean Navy, protector of the Atlantic, is mighty! Yet even a navy as powerful as ours needs to continue to innovate in order to stay ahead of the compteition."
  ATL_strategy_buff3:0 "Industrial Improvements"
- ATL_strategy_buff3_desc:0 "."
+ ATL_strategy_buff3_desc:0 "Our industries could use some technical improvements and streamlining."
  ATL_international_research:0 "International Research"
- ATL_international_research_desc:0 "."
+ ATL_international_research_desc:0 "We must open our scientific community to outside ideas. We did so before when the Europeans arrived, and look how it benefitted us!"
  ATL_intl_research_teams:0 "International Research Teams"
- ATL_intl_research_teams_desc:0 "."
+ ATL_intl_research_teams_desc:0 "If we work with international research teams we may be able to bring some innovations back to Atlantis."
  ATL_national_weapons_lab:0 "National Weapons Lab"
- ATL_national_weapons_lab_desc:0 "."
+ ATL_national_weapons_lab_desc:0 "Desperate times lie ahead. We must prepare weapons to defend our nation against the aggression that will surely come."
  ATL_espionage_teams:0 "Espionage Teams"
- ATL_espionage_teams_desc:0 "."
+ ATL_espionage_teams_desc:0 "By gathering intelligence, and gaining copies of foreign blueprints, we can assure Atlantean technical supremacy."
  ATL_intl_designs1:0 "International Designs"
  ATL_intl_designs1_desc:0 "Now that we have access to international technologies we can begin reverse engineering them to produce our own versions and improve upon them."
  ATL_intl_designs2:0 "More Research Designs"
- ATL_intl_designs2_desc:0 "."
+ ATL_intl_designs2_desc:0 "Now that we have studied foreign designs our scientists have begun to develop their own, with distinct improvements and benefits for Atlantis."
  ATL_super_projects:0 "Super Projects"
- ATL_super_projects_desc:0 "."
+ ATL_super_projects_desc:0 "To prepare for massive, world changing projects, we must gather the finest minds and prepare a place for them to work. We must prepare the Super Projects Institute and begin to change the world!"
  ATL_nuclear_chemistry:0 "Nuclear Chemistry"
  ATL_nuclear_chemistry_desc:0 "Modern chemistry has much to teach us about the natural world, but by combining chemistry and physics our scientists believe that there are significant gains that could be made. This could bring both civilian and military improvements to our nation."
  ATL_vlfp:0 "VLFPs"
@@ -112,43 +112,43 @@
  ATL_calculation_machine:0 "Calculation Machine"
  ATL_calculation_machine_desc:0 "The English polymath Charles Babbage, who studied for years in Zuhaitz at the Atlantean Polytechnic Institute, was nearly finished with his 'Differential Engine' before his death. Sadly, it has languished unfinished in his workshop. Our scientists believe that this machine could be completed and that it will speed up their own research greatly if they own it. We must acquire it, or a copy of it."
  ATL_trading_and_banking_societies:0 "Trade and Banking Societies"
- ATL_trading_and_banking_societies_desc:0 "."
+ ATL_trading_and_banking_societies_desc:0 "If we do not get our domestic house in order we will never be able to compete in this ever changing world! If we can streamline our society, starting with those secret societies that are trying to control trade and banking, it will surely be good for the nation."
  ATL_karistig_dynasty:0 "Karistig Dynasty"
- ATL_karistig_dynasty_desc:0 "."
+ ATL_karistig_dynasty_desc:0 "Our oldest banking dynasty, the Karistig Dynasty, has survived for three centuries in Atlantis' cutthroat secret world. They have managed to control a huge number of banks, counting houses, prisons, mining and extraction companies, and recently they have even gained a fair amount of control of the scientific community. You know that you can trust the Karistigs with a history like that."
  ATL_tensapiak_cartel:0 "Tensapiak Cartel"
- ATL_tensapiak_cartel_desc:0 "."
+ ATL_tensapiak_cartel_desc:0 "Immediate benefits. That's what the Tensapiak Cartel promises us. These upstarts have only been around for twenty years or so, but they've already managed to control 90% of the Atlantean fish farms and floating plantations. While they may not have a long track record, they certainly can produce results."
  ATL_united_bankers_guild:0 "United Bankers Guild"
- ATL_united_bankers_guild_desc:0 "."
+ ATL_united_bankers_guild_desc:0 "Stability, stability, stability. That is what the United Bankers Guild is promising us. If we give them the control over the banks, markets, and financial instruments of the state, they promise us that Atlantis will prosper steadily forever. While this may be a bit of an overstatement, their promised stability would be welcomed."
  ATL_rothschilds:0 "Rothschilds"
- ATL_rothschilds_desc:0 "."
+ ATL_rothschilds_desc:0 "American 'old money'. Ha! America doesn't know the meaning of 'old' - but the Rothschilds do have a LOT of money - and they are not shy about letting us know that they would be investing quite a lot of it in Atlantis should their overtures be accepted."
  ATL_fuggers:0 "Fuggers"
- ATL_fuggers_desc:0 "."
+ ATL_fuggers_desc:0 "The German banking family, the Fuggers, has made unmistakable overtures regarding their desire to 'help' the Atlantean economy. Their 'help' would certainly come with a number of side effects."
  ATL_political_news_societies:0 "Political and News Societies"
- ATL_political_news_societies_desc:0 "."
+ ATL_political_news_societies_desc:0 "We know of a number of societies that have been vying to control the politics and public discourse in Atlantis. We should be careful about how we maneuver this portion of our responsibilities... a misstep could be disasterous."
  ATL_monarchists:0 "Monarchists"
- ATL_monarchists_desc:0 "."
+ ATL_monarchists_desc:0 "Formed not long after the union which birthed the Republic, the Monarchists (the Hastugudak) seek to repeal the republican form of government and replace it with their royal house. They have not been popular for almost 200 years, but we never have been able to eliminate them."
  ATL_black_daggers:0 "Black Daggers"
- ATL_black_daggers_desc:0 "."
+ ATL_black_daggers_desc:0 "A radical group founded in 1840 by Guda (Supreme Ruler) Erguld Aserra as the enforcement arm of his Sons of Atlantis. How their group survived the bloody civil war may never be known, but we know that they have not only survived, but thrived. They will bring Atlantis back to her former glory... They swear it on their own children's blood."
  ATL_hexanchial:0 "The Hexanchial"
- ATL_hexanchial_desc:0 "."
+ ATL_hexanchial_desc:0 "The longest lived secret society in Atlantis, the Hexanchial has been the guiding force in Atlantean politics since the first moments of the Republic. Should we continue to allow their stable, guiding hand to rule?"
  ATL_hearsts:0 "The Hearsts"
- ATL_hearsts_desc:0 "."
+ ATL_hearsts_desc:0 "Having the Hearsts come to Atlantis is... interesting. This media family controls a significant portion of the American news apparatus, and now they would like to extend their reach to Atlantis. This could be very beneficial to us..."
  ATL_kaiturn_family:0 "The Kaiturn Family"
- ATL_kaiturn_family_desc:0 "."
+ ATL_kaiturn_family_desc:0 "Our own media family, the Kaiturn family, would like to ensure their control over the domestic news in Atlantis. While their reach may not be as wide or as strong as their foreign competitors, having the Kaiturn family work for us could prove useful in the years to come."
  ATL_rmvp:0 "RMVP"
  ATL_rmvp_desc:0 "A unique opportunity has presented itself. The Reichsministerium für Volksaufklärung und Propaganda, otherwise known as the Nazi Propaganda Machine, has begun spreading control throughout the outlying islands. If we were to welcome them in and given them control of our domestic news services we might find ourselves with a powerful ally, Germany."
  ATL_crime_societies:0 "Crime Syndicates"
- ATL_crime_societies_desc:0 "."
+ ATL_crime_societies_desc:0 "Crime is inevitable. If we were to maneuver our society in such a way as to benefit from it..."
  ATL_zichilianak:0 "The Sicilians"
- ATL_zichilianak_desc:0 "."
+ ATL_zichilianak_desc:0 "The Italians have long dealt with organized crime. They've come to an 'understanding' with the Sicilians. Now the Sicilians would like to do business with us. This could prove... interesting."
  ATL_siegels:0 "The Siegels"
- ATL_siegels_desc:0 "."
+ ATL_siegels_desc:0 "The Jewish-American Siegel family has begun to infiltrate our local ports. They indicate that they will bring stability to the Atlantean Underworld. If we accept their overtures this will certainly effect our relationship with our trade partners."
  ATL_kaprastiak:0 "The Kaprastiak Dynasty"
- ATL_kaprastiak_desc:0 "."
+ ATL_kaprastiak_desc:0 "One of our local crime units, the Kaprastiak Dynasty, is looking to solidify their control over the Atlantean Underworld. If we work with them to ensure stability it may be to our benefit."
  ATL_itorkanak:0 "The Itorkanak Dynasty"
- ATL_itorkanak_desc:0 "."
+ ATL_itorkanak_desc:0 "The Itorkanak Dynasty has had a long running feud with the Kaprastiak Dynasty. If we side with them we might gain some benefits they claim to be able to provide for us."
  ATL_military_societies:0 "Military Societies"
- ATL_military_societies_desc:0 "."
+ ATL_military_societies_desc:0 "Atlantis has a long history of secret societies being involved with the military. We might find some advantages for our nation if we were to decide to favor any of these secret societies..."
  ATL_maneaters:0 "The Maneaters"
  ATL_maneaters_desc:0 "History knew the Maneaters through various names, but the best known was the Greek epithet 'Anthropofagoi'. Born from the death cults of Southwest Atlantis the Maneaters take strength and courage from devouring the flesh of their enemies. They are almost unstoppable on the field of battle."
  ATL_restorationists:0 "The Restorationists"
@@ -172,7 +172,7 @@
  ATL_green_brigade:0 "The Green Brigade"
  ATL_green_brigade_desc:0 "A disagreement has arisen within the ranks of the Orange Masks! The Green Brigade understands that National Socialism is the answer to Atlantis' problems. The people must be made to understand, and taught in school, that their devotion to the state and a strong leader will preserve Atlantis."
  ATL_kenistroiak:0 "The Kenistroiak"
- ATL_kenistroiak_desc:0 "These students and professors, often educated at foreign universities in Britain or the United States, wish to see democratic reforms sweep more fully across the nation, even in education. They feel that they benefits of a strong capitalist system will ensure the health and wellbeing of Atlantis."
+ ATL_kenistroiak_desc:0 "These students and professors, often educated at foreign universities in Britain or the United States, wish to see democratic reforms sweep more fully across the nation, even in education. They feel that the benefits of a strong capitalist system will ensure the health and wellbeing of Atlantis."
  ATL_:0 ""
  _desc:0 "."
  ATL_:0 ""
