Lemurian terrain and ATL focus tree updates

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -173,8 +173,8 @@
  ATL_green_brigade_desc:0 "A disagreement has arisen within the ranks of the Orange Masks! The Green Brigade understands that National Socialism is the answer to Atlantis' problems. The people must be made to understand, and taught in school, that their devotion to the state and a strong leader will preserve Atlantis."
  ATL_kenistroiak:0 "The Kenistroiak"
  ATL_kenistroiak_desc:0 "These students and professors, often educated at foreign universities in Britain or the United States, wish to see democratic reforms sweep more fully across the nation, even in education. They feel that the benefits of a strong capitalist system will ensure the health and wellbeing of Atlantis."
- ATL_:0 ""
- _desc:0 "."
+ ATL_ringvereine:0 "Ringvereine Immertrau"
+ ATL_ringvereine_desc:0 "The Ringvereine Immertrau is one of the largest and toughest German crime syndicates. Ex-convicts and crime bosses, these Germans have refined crime to a science. Their connections in Germany, and throughout Europe, could give us a straight shot into many European markets licit and illicit."
  ATL_:0 ""
  _desc:0 "."
  
