the butcher of qasha peak is here!(if anyone wants to redo the event text/modify the story a bit feel free this is not the best as it is)

--- a/localisation/GEQ_l_english.yml
+++ b/localisation/GEQ_l_english.yml
@@ -221,3 +221,19 @@
  GEQ_fighter_investments_desc:0 ""
  GEQ_CAS_investments:0 "Close Air Support Investments"
  GEQ_CAS_investments_desc:0 ""
+ GEQ_new_researchers:0 "New Researchers"
+ GEQ_new_researchers_desc:0 "We have let's say hired new personell to research technologies we would like to be researched."
+ geq.32.t:0 "The Mad Butcher of Qasha Peak"
+ geq.32.d:0 "A serial killer is on the loose in Qasha Peak, there have been many disappearences recently, we have many suspects. Should we investigate this further, or not spend any resources on this case?"
+ geq.32.a:0 "Investigate and find the killer"
+ geq.32.b:0 "We don't have the time to investigate"
+ geq.33.t:0 "Bunker Spotted"
+ geq.33.d:0 "Around the city of Qasha Peak people have seen supposed bunkers all around the forest, they believe they are military bunkers, but we have no military presence in the region."
+ geq.33.a:0 "Delusional Sheep"
+ geq.33.b:0 "Let Us Investigate"
+ geq.34.t:0 "The Mad Butcher of Qasha Peak Found!"
+ geq.34.d:0 "The so called 'Mad Butcher of Qasha Peak' Biqtur Varanginstaym has been caught, he leads a cult of followers who reside in these bunkers, while they kidnap people and experiment on them and then kill them in a cult ceremony. There seems to be a lot of substances that might prove valueable in future combat, and a lot of potentially new medical knowledge."
+ geq.34.a:0 "Seize his work, and demand he work for us."
+ geq.35.t:0 "The Mad Butcher of Qasha Peak Found!"
+ geq.35.d:0 "The so called 'Mad Butcher of Qasha Peak' Biqtur Varanginstaym has been caught last night, his kill count is 17, he will be sent to death in a week."
+ geq.35.a:0 "Finally!."
