Changed the Thule country names

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -71,12 +71,12 @@
  ATL_democratic_ADJ:0 "Atlantean"
  ATL_neutrality_ADJ:0 "Atlantean"
  ATL_communism_ADJ:0 "Atlantean"
- THU_fascism:0 "Thule"
- THU_fascism_DEF:0 "Thule"
+ THU_fascism:0 "Thulandic Order"
+ THU_fascism_DEF:0 "The Thulandic Order"
  THU_democratic:0 "Thule"
  THU_democratic_DEF:0 "Thule"
- THU_neutrality:0 "Thule"
- THU_neutrality_DEF:0 "Thule"
+ THU_neutrality:0 "North Atlantic Federation"
+ THU_neutrality_DEF:0 "The North Atlantic Federation"
  THU_communism:0 "Socialist Republic of Thule"
  THU_communism_DEF:0 "The Socialist Republic of Thule"
  THU_fascism_ADJ:0 "Thulander"
