yeehaw more NAF :D

--- a/localisation/AML_decisions_l_english.yml
+++ b/localisation/AML_decisions_l_english.yml
@@ -68,3 +68,10 @@
  GEQ_core_NHI_desc:0 "We will send in people and resources to core New Hibernia."
  GEQ_core_the_lezam_hills:0 "Core the Lezam Hills"
  GEQ_core_the_lezam_hills_desc:0 "We will send in people and resources to core the Lezam Hills."
+
+ form_naf:0 "Proclaim the North Atlantic Federation"
+ form_naf_category:0 "Proclaim the North Atlantic Federation"
+ form_country_thule_required_states_tt:0 "Controls Thule."
+ form_country_frisland_required_states_tt:0 "Controls Frisland."
+ form_country_greenland_required_states_tt:0 "Controls Iceland."
+ form_naf_category_desc:0 "Gaydr and his compatriots put forth a theory of a union between the nations of the northern Atlantic. A deal to be struck, to unite the region, but was blocked by foreign imperialists in 1898. Yet, now our time has come again; we shall form a strong bond in an act of solidarity between our brothers! Long live the federation!"
