--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -722,3 +722,17 @@
  GEQ_REOM_democratic_DEF:0 "The Republic of Mu"
  GEQ_REOM_communism:0 "Mu Commune"
  GEQ_REOM_communism_DEF:0 "The Mu Commune"
+
+
+
+
+
+
+  NAF_FEDERATION_neutrality:0 "North Atlantic Federation"
+ NAF_FEDERATION_neutrality_DEF:0 "the North Atlantic Federation"
+ NAF_FEDERATION_fascism:0 "Hyperborea"
+ NAF_FEDERATION_fascism_DEF:0 "Hyperborea"
+ NAF_FEDERATION_democratic:0 "North Atlantic Federation"
+ NAF_FEDERATION_democratic_DEF:0 "the North Atlantic Federation"
+ NAF_FEDERATION_communism:0 "Treaty of North Atlantic Socialist Republics"
+ NAF_FEDERATION_communism_DEF:0 "the Treaty of North Atlantic Socialist Republics"
