FSM naming updates

--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -31,20 +31,20 @@
  FSM_more_research_desc:1 "With our economy now safer, we can begin to give funds to our scientific endeavors"
  FSM_unite_germans:0 "Unite the Mu-Deutsche"
  FSM_unite_germans_desc:0 "History has proven that national unity based on cultural similarities like language and religion is the only way to survive in this world. We must bring together all of the Mu-Deutsche under one banner."
- FSM_schoenesland_1:0 "Invite Schoenesland"
- FSM_schoenesland_1_desc: "When we first arrived on this rich continent, the German people had spread far and wide. The island nation of Schoenesland is one of those settlements. It is reasonable that they would see our goal as clearly as we do."
- FSM_schoenesland_2:0 "The Schoenesland Question"
- FSM_schoenesland_2_desc: "Though far removed from us geographically, Schoenesland is another bastion of German heritage. A century ago, we helped them secure their freedom. Today, we shall lead them to their glory again"
+ FSM_schoenesland_1:0 "Invite Schönland"
+ FSM_schoenesland_1_desc: "When we first arrived on this rich continent, the German people had spread far and wide. The island nation of Schönland is one of those settlements. It is reasonable that they would see our goal as clearly as we do."
+ FSM_schoenesland_2:0 "The Schönland Question"
+ FSM_schoenesland_2_desc: "Though far removed from us geographically, Schönland is another bastion of German heritage. A century ago, we helped them secure their freedom. Today, we shall lead them to their glory again"
  FSM_vogelinsel_1:0 "Invite Vogelinsel"
- FSM_vogelinsel_1_desc:0 "A humble nation of South Mu, Vogelinsel had once voted to stay out of the Freistaaten. Nonetheless, they remain a close neighbour, and see plenty of influence from the FSM. Perhaps they would be willing to step up our cooperation?"
+ FSM_vogelinsel_1_desc:0 "A humble nation of South Mu, Vogelinsel had once voted to stay out of the Freiestaaten. Nonetheless, they remain a close neighbour, and see plenty of influence from the FSM. Perhaps they would be willing to step up our cooperation?"
  FSM_vogelinsel_2:0 "Ultimatum to Vogelinsel"
- FSM_vogelinsel_2_desc:0 "The nation of Vogelinsel is meager and vulnerable. Their independence had given them relative peace, but as war draws near, their chances of surviving dwindle. Joining the Freistaaten is their only path to glory."
+ FSM_vogelinsel_2_desc:0 "The nation of Vogelinsel is meager and vulnerable. Their independence had given them relative peace, but as war draws near, their chances of surviving dwindle. Joining the Freiestaaten is their only path to glory."
  FSM_challenge_austral_sea:0 "Austral Ocean Dominance"
  FSM_challenge_austral_sea_desc:0 "Many times in history nations have tried to claim bodies of water as their own. Most have not succeeded. But our dominance of the Austral Ocean is assured!"
  FSM_supress_manu_nationalism:1 "Oust Opposition in Manu"
  FSM_supress_manu_nationalism_desc:1 "The 1920 treaty of Brunpfadstad ended the brief British protectorate and reorganized Saxonia Austral as the Manu Autonomous State under FSM administration. Manu was to be admitted as a full state of the FSM by 1935; unfortunately, many fascist sympathizers in their government have resisted integration of the state. The only way we can move forward is by weeding out these obstructionists."
  FSM_rebuild_the_dockyards:1 "Rebuild the Dockyards"
- FSM_rebuild_the_dockyards_desc:1 "The heaviest toll in the Great War was taken by our southern ports. Housing a majority of our civilian and military dockyards, Blauswasser was a hub of trade and naval power for the growing FSM. Ruthless coastal bombardment and the occupation of the city by Entente forces left this industry in ruins. If we hope to revitalize the nation, it is best to start here."
+ FSM_rebuild_the_dockyards_desc:1 "The heaviest toll in the Great War was taken by our southern ports. Housing a majority of our civilian and military dockyards, Blauwasser was a hub of trade and naval power for the growing FSM. Ruthless coastal bombardment and the occupation of the city by Entente forces left this industry in ruins. If we hope to revitalize the nation, it is best to start here."
  FSM_ripples_of_shanghai:1 "Ripples of Shanghai"
  FSM_ripples_of_shanghai_desc:1 "7 years ago, sparked by the sinking of its crown vessel in the ports of Shanghai, the economic bubble of the German South Mu Company popped, with catastrophic consequences. Once a major holder of all trade in and out of Mu, the company is now a husk of its former shelf, and the economic influence it gave us is slipping out of our hands."
  FSM_kohn_gambit:1 "Kohn Gambit"
@@ -90,7 +90,7 @@
  FSM_antarctic_expedition:1 "Antarctic Expedition"
  FSM_antarctic_expedition_desc:1 "The southern continent has remained elusive. Cold conditions, relentless snowstorms, and lack of civilization means that no one has attempted to reach the south pole again since 1911. If we can claim the silver medal for this accomplishment with an even bolder expedition, we can be sure to receive admiration among the scientific community."
  FSM_centralize:1 "Centralize"
- FSM_centralize_desc:1 "As it stands now, our nation is divided; too many regulations differ between the states, and agreement is inconsistent. A strong nation needs a centralized government and an clear vision for the future. We must reform the government, and make sure everyone gets an equal treatment under the Freistaaten law, from every Ottostaater to Wüstenlander."
+ FSM_centralize_desc:1 "As it stands now, our nation is divided; too many regulations differ between the states, and agreement is inconsistent. A strong nation needs a centralized government and an clear vision for the future. We must reform the government, and make sure everyone gets an equal treatment under the Freiestaaten law, from every Ottostaater to Wüstenlander."
  FSM_commonplaceholder2:1 "Preparing Alternate Naval Facilities"
  FSM_commonplaceholder2_desc:1 "The Great War proved that placing all of our primary naval facilities in one location was folly. We must prepare another group of dockyards to continue producing hulls, should a war turn for the worst. And we must protect our capital against naval invasion as well!"
  FSM_american_union:1 "A More American Union"
@@ -177,7 +177,7 @@
 
  fsm.1.t:0 "Liberale Koalition Wins Elections"
  fsm.1.d:0 "The 1936 election in the FSM have concluded with a suprising victory at the hands of the Liberale Koalition. A progressive group, the LK party has only gained traction within recent years, but it seems to have been enough to garner them a slim majority of the votes. The party is already promising to undertake major reforms of the nation, in hopes of revitalizing the economy, mending the nation's poor diplomatic relations, and creating a more democratic and egalitarian state."
- fsm.1.a:0 "To a new course for the Freistaaten!!"
+ fsm.1.a:0 "To a new course for the Freiestaaten!!"
  fsm.2.t:0 "Selbstverwaltung Partei Wins Elections"
  fsm.2.d:0 "Despite the increased political resistance this term, the Selbstverwaltung Partei has emerged victorious once again. Dominating the nations politics since independence in 1919, the party upholds self-rule for the FSM, and favours an economy built on large, German-owned companies within the country. Although it has become a pillar of stability for the people, there are worries among the government that many members of the party have become unscrupulous in their rule, and foster authoritarian sympathies."
  fsm.2.a:0 "To another properous term!"
@@ -191,7 +191,7 @@
  fsm.4.b:0 "Never shall Saxonia Austral stand under any flag but our own!"
 
  fsm.5.t:0 "Manu Accepts Integration"
- fsm.5.d:0 "It seems our recent interventions have indeed cleared up the mess that was Manu's administration. A simple message came in today to the parlamient, a document of agreement to the integration, signed by the head of administration himself. We shall waste no time in honoring Manustaat as a righteous and full Staat under the Freistaaten union."
+ fsm.5.d:0 "It seems our recent interventions have indeed cleared up the mess that was Manu's administration. A simple message came in today to the parlamient, a document of agreement to the integration, signed by the head of administration himself. We shall waste no time in honoring Manustaat as a righteous and full Staat under the Freiestaaten union."
  fsm.5.a:0 "A toast to the new compatriots!"
  
  fsm.6.t:0 "FSM Seeks Alliance"
@@ -215,7 +215,7 @@
 
  fsm.10.t:0 "FSM Takes Over Government"
  fsm.10.d:0 "The FSM has stepped in and taken over leadership of our nation"
- fsm.10.a:0 "oh no. bad."
+ fsm.10.a:0 "Oh no. Bad."
 
  fsm.11.t:0 "The Fate of Tiquea"
  fsm.11.d:0 "Our military campaign in Tiquea has succeeded, and we now reap the rewards of war. Unfortunately, it is undeniable the Tiqueans won't be happy with becoming part of the FSM. Perhaps it would be wise to grant them some autonomy, to keep them from biting us."
@@ -223,7 +223,7 @@
  fsm.11.b:0 "We'll administer them however we damn please."
 
  fsm.12.t:0 "FSM Demands Subjugation."
- fsm.12.d:0 "Here's to hoping that no one actually goes and plays Schoenesland because its 1 hour from release day and i have no clue what to write here. TL;DR you're getting annexed kiddo."
+ fsm.12.d:0 "FSM has presented us with an ultimatum: annexation or else."
  fsm.12.a:0 "A line must be drawn somewhere."
  fsm.12.b:0 "We accept."
 
@@ -249,12 +249,12 @@
  fsm.17.d:0 "Our recent diplomatic pressure on Australia has finally cracked them. The Colony of New Guinea is to be officially transferred to the FSM, as a client state. A german-led administration is already being put together to serve as a new government on the island, and our high command has been busy drafting war plans and funneling resources into this new Colony, hoping to establish it as a major port and jumping off point for our Navy."
  fsm.17.a:0 "Another German land back in rightful hands!"
 
- fsm.20.t:0 "FSM proposes anschluss"
+ fsm.20.t:0 "FSM proposes Anschluss"
  fsm.20.d:0 "The ever expanding FSM doctrine has reached us too. They now stand at our doors, with an ultimatum; hand over the country!"
  fsm.20.a:0 "Never."
  fsm.20.b:0 "We're better with them!"
  fsm.20.c:0 "We'll lay down our lives for them!"
  fsm.24.t:0 "FSM Proposes Alliance"
- fsm.24.d:0 "Word has reached us the the Freistaaten are once again attempting to establish hegemony over their slice of Mu. They've been steadily improving their military, and are pushing for solidarity between the German nations of Mu. They have reached out to us, and propose that we join them in forces."
+ fsm.24.d:0 "Word has reached us the the Freiestaaten are once again attempting to establish hegemony over their slice of Mu. They've been steadily improving their military, and are pushing for solidarity between the German nations of Mu. They have reached out to us, and propose that we join them in forces."
  fsm.24.a:0 "Gladly!"
  fsm.24.b:0 "We would rather not..."
