--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -287,32 +287,32 @@
  VGI_democratic_ADJ:0 "Vogelinsular"
  VGI_neutrality_ADJ:0 "Vogelinsular"
  VGI_communism_ADJ:0 "Vogelinsular"
- SCH_fascism:0 "Schoenesland"
- SCH_fascism_DEF:0 "Schoenesland"
- SCH_democratic:0 "Schoenesland"
- SCH_democratic_DEF:0 "Schoenesland"
- SCH_neutrality:0 "Schoenesland"
- SCH_neutrality_DEF:0 "Schoenesland"
- SCH_communism:0 "Socialist Republic of Schoenesland"
- SCH_communism_DEF:0 "The Socialist Republic of Schoenesland"
- SCH_fascism_ADJ:0 "Schoeneslander"
- SCH_democratic_ADJ:0 "Schoeneslander"
- SCH_neutrality_ADJ:0 "Schoeneslander"
- SCH_communism_ADJ:0 "Schoeneslander"
- FSM_fascism:0 "Freiestaaten von Deutschesmu"
- FSM_fascism_DEF:0 "Freiestaaten von Deutschesmu"
- FSM_democratic:0 "Freiestaaten von Mu"
+ SCH_fascism:0 "Schönland"
+ SCH_fascism_DEF:0 "Schönland"
+ SCH_democratic:0 "Schönland"
+ SCH_democratic_DEF:0 "Schönland"
+ SCH_neutrality:0 "Schönland"
+ SCH_neutrality_DEF:0 "Schönland"
+ SCH_communism:0 "Socialist Republic of Schönland"
+ SCH_communism_DEF:0 "The Socialist Republic of Schönland"
+ SCH_fascism_ADJ:0 "Schönlander"
+ SCH_democratic_ADJ:0 "Schönlander"
+ SCH_neutrality_ADJ:0 "Schönlander"
+ SCH_communism_ADJ:0 "Schönlander"
+ FSM_fascism:0 "Freistaat Deutsch-Mu"
+ FSM_fascism_DEF:0 "Freistaat Deutsch-Mu"
+ FSM_democratic:0 "Freie Staaten von Mu"
  FSM_democratic_DEF:0 "The Freiestaaten von Mu"
- FSM_neutrality:0 "Freiestaaten von Mu"
- FSM_neutrality_DEF:0 "The Freiestaaten von Mu"
- FSM_communism:0 "Socialist Republic of Deutschesmu"
- FSM_communism_DEF:0 "The Socialist Republic of Deutschesmu"
- FSM_fascism_ADJ:0 "Kaiserstaaten"
- FSM_democratic_ADJ:0 "Freiestaaten"
- FSM_neutrality_ADJ:0 "Freiestaaten"
- FSM_communism_ADJ:0 "Deutschesmu"
- MNU_fascism:0 "Freistaat Neues Sachsen"
- MNU_fascism_DEF:0 "Freistaat Neues Sachsen"
+ FSM_neutrality:0 "Freistaat Mu"
+ FSM_neutrality_DEF:0 "The Freistaat Mu"
+ FSM_communism:0 "Socialist Republic of Deutsch-Mu"
+ FSM_communism_DEF:0 "The Socialist Republic of Deutsch-Mu"
+ FSM_fascism_ADJ:0 "Deutsch-Muer"
+ FSM_democratic_ADJ:0 "Freistaater"
+ FSM_neutrality_ADJ:0 "Freistaater"
+ FSM_communism_ADJ:0 "Mu-Deutsche"
+ MNU_fascism:0 "Neu-Sachsenland"
+ MNU_fascism_DEF:0 "Neu-Sachsenland"
  MNU_democratic:0 "Manu Autonomous State"
  MNU_democratic_DEF:0 "The Manu Autonomous State"
  MNU_neutrality:0 "Manu"
