--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -43,7 +43,7 @@
  FSM_nikos_beloyannis:0 "Tomas Anhalt"
  FSM_aristeidis_moraitinis:0 "Matias Ülering"
  FSM_gnaf:0 "Kimmels Flugzeugfertigung"
- FSM_royal_hellenic_naval_shipyard:0 "Blaueswasser Schiffsfertigung"
+ FSM_royal_hellenic_naval_shipyard:0 "Blauwasser Schiffsfertigung"
  thanikas_bousinissi:0 "Thanikas Bousinissi"
  anakistas_gobriski:0 "Anakistas Gobriski"
  laimaria_unismitri:0 "Laimaria Unismitri"
