--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -852,7 +852,7 @@
  STATE_851:0 "Hannahland"
  STATE_852:0 "Friendsville"
  STATE_853:0 "Walen"
- STATE_854:0 "Schoenesland"
+ STATE_854:0 "Schönland"
  STATE_855:0 "Sofiashavn"
  STATE_856:0 "Navganara"
  STATE_857:0 "Navdrmu"
@@ -931,7 +931,7 @@
  STATE_930:0 "Ottosstaat"
  STATE_931:0 "Petersstrand"
  STATE_932:0 "Karlswald"
- STATE_933:0 "Blaueswasserstaat"
+ STATE_933:0 "Blauwasserstaat"
  STATE_934:0 "Jaegerstaat"
  STATE_935:0 "Südwüstenland"
  STATE_936:0 "Nordwüstenland"
