--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -934,7 +934,7 @@
  VICTORY_POINTS_13943:0 "Papeete"
  VICTORY_POINTS_13603:0 "Nyrønne"
  VICTORY_POINTS_13049:0 "Pitkairn"
- VICTORY_POINTS_8787:0 "Blaueswasser"
+ VICTORY_POINTS_8787:0 "Blauwasser"
  VICTORY_POINTS_13837:0 "Vatpagchi Saeli"
  VICTORY_POINTS_13905:0 "Nofoaga Agava'a"
  VICTORY_POINTS_13907:0 "Awa"
