--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -11,6 +11,18 @@
  GER_democratic_ADJ:0 "German"
  GER_neutrality_ADJ:0 "German"
  GER_communism_ADJ:0 "German"
+ ZEN_fascism:2 "Zenaga State"
+ ZEN_fascism_DEF:2 "Zenaga State"
+ ZEN_democratic:0 "Zenaga"
+ ZEN_democratic_DEF:0 "Zenaga"
+ ZEN_neutrality:1 "Zenigal"
+ ZEN_neutrality_DEF:1 "Zenigal"
+ ZEN_communism:2 "Commune of Zenaga"
+ ZEN_communism_DEF:2 "the Commune of Zenaga"
+ ZEN_fascism_ADJ:1 "Zenagan"
+ ZEN_democratic_ADJ:0 "Zenagan"
+ ZEN_neutrality_ADJ:1 "Zenigalese"
+ ZEM_communism_ADJ:1 "Zenagan"
  CAL_fascism:0 "Greater California"
  CAL_fascism_DEF:0 "Greater California"
  CAL_democratic:0 "California Republic"
